Tidy up javadoc and naming conventions for math operation files